# pydantic-ai-test

./: .gitignore  README.md  pyproject.toml
src/app/: agent_flow.py  main.py  pydantic_graph.py  test.py
